--- a/slides.pod
+++ b/slides.pod
@@ -675,7 +675,9 @@ Voices
 
 =head1 Links
 
-This Slideshow: L<https://github.com/ology/Perl-Algorithmic-Music>
+This Slideshow: L<https://ology.net/dev/Perl-Algorithmic-Music/>
+
+L<On GitHub|https://github.com/ology/Perl-Algorithmic-Music>
 
 L<Made with S5|http://search.cpan.org/dist/Pod::S5>
 
