--- a/slides.pod
+++ b/slides.pod
@@ -678,8 +678,7 @@ Voices
 This Slideshow: L<https://ology.net/dev/Perl-Algorithmic-Music/>
 
 L<On GitHub|https://github.com/ology/Perl-Algorithmic-Music>
-
-L<Made with S5|http://search.cpan.org/dist/Pod::S5>
+(L<Made with S5|http://search.cpan.org/dist/Pod::S5>)
 
 L<The GrooveTool|https://github.com/ology/Groove-Tool>
 
