--- a/slides.pod
+++ b/slides.pod
@@ -669,7 +669,7 @@ my @notes2 = map { $voice->rand } $motifs[1]->@*;
 
 =begin note
 
-Voices
+Voices with the excellent Music::VoiceGen module by Jeremy Mates (AKA thrig)
 
 =end note
 
