--- a/slides.pod
+++ b/slides.pod
@@ -684,6 +684,6 @@ L<The GrooveTool|https://github.com/ology/Groove-Tool>
 
 L<Algorithmic Composition Wiki|https://github.com/ology/MIDI-Perl-HOWTO/wiki>
 
-Shameless plug: My L<latest album|https://ology.net/XI/> is on youtube, spotify, apple music, etc., and includes the partially algorithmic tune, "Permutational." Check it out!
+Shameless plug: My L<latest album "XI"|https://ology.net/XI/> is on youtube, spotify, apple music, etc., and includes the partially algorithmic tune, "Permutational." Check it out!
 
 =cut
