--- a/slides.pod
+++ b/slides.pod
@@ -154,7 +154,7 @@ Algorithms that can create different versions of music
 
 =begin note
 
-...
+SKIP
 
 =end note
 
@@ -180,7 +180,7 @@ Often composed according to a predetermined set of instructions
 
 =begin note
 
-...
+SKIP
 
 =end note
 
@@ -206,7 +206,7 @@ Use of stochastic processes
 
 =begin note
 
-...
+SKIP
 
 =end note
 
@@ -244,7 +244,7 @@ Manipulating small details of a composition to create new, unique pieces of musi
 
 =begin note
 
-...
+SKIP
 
 =end note
 
@@ -272,7 +272,7 @@ A constraint solver searches for solutions, where variables are bound to values 
 
 =begin note
 
-...
+SKIP
 
 =end note
 
@@ -300,7 +300,7 @@ By changing the probabilities of rhythms, notes, chords, or phrases, different v
 
 =begin note
 
-...
+SKIP
 
 =end note
 
@@ -328,7 +328,7 @@ Based on genetic algorithms using mutation and natural selection
 
 =begin note
 
-...
+SKIP
 
 =end note
 
