--- a/slides.pod
+++ b/slides.pod
@@ -10,7 +10,9 @@ Let's talk about music!
 
 The first part will cover often overlapping concepts.
 
-The second will be examples of actual algorithms.
+I will skip the deep dive into types and techniques of algorithmic music, so we can get to the meat of the matter:
+
+Which is the second part: Examples of actual algorithms.
 
 =end note
 
