--- a/slides.pod
+++ b/slides.pod
@@ -14,7 +14,7 @@ I will skip the deep dive into types and techniques of algorithmic music, so we 
 
 Which is the second part: Examples of actual algorithms.
 
-Also, these slides are live at the link on the bottom of each page.
+Also, these slides are live at the link on the bottom of the pages.
 
 =end note
 
