--- a/slides.pod
+++ b/slides.pod
@@ -96,7 +96,7 @@ To generate musical ideas and satisfy curiosity
 
 =item *
 
-For practice and study passages
+For practice and study with rhythms (i.e. a better metronome) and etudes
 
 =item *
 
