--- a/slides.pod
+++ b/slides.pod
@@ -651,7 +651,7 @@ my $mdp = Music::Duration::Partition->new(
     groups  => [    1,  1, 1, 2 ],
 );
 
-my @motifs = map { $mdp->motif } 1 .. 2;
+my @motifs = map { $mdp->motif } 1 .. $motif_number;
 
 =end perl
 
