--- a/slides.pod
+++ b/slides.pod
@@ -661,6 +661,8 @@ elsif ($part->{style} eq 'pfold') {
 
 Where the $key is a unique phrase identifier.
 
+And "pfold" is another type of combinatorial pattern that can be generated.
+
 =end note
 
 =head1 Figured Bass Part 1 of 2
