--- a/slides.pod
+++ b/slides.pod
@@ -588,14 +588,12 @@ for my $c (qw(Cm7 F7 BbM7 EbM7 Adim7 D7 Gm)) {
     my @chord = $mcn->chord_with_octave($c, 4);
 
     @chord = midi_format(@chord);
-    print ddc(\@chord);
+    print ddc(\@chord); # [ 'C4', 'Ds4', 'G4', 'As4' ], etc.
 
     $score->n('wn', @chord);
 }
 
 $score->write_score("$0.mid");
-
-# 1st chord: [ 'C4', 'Ds4', 'G4', 'As4' ], etc.
 
 =end perl
 
