--- a/slides.pod
+++ b/slides.pod
@@ -552,7 +552,7 @@ sub treble {
 > vim ex-04-03.pl
 :!rm %.mid ; perl % ; timidity %.mid
 
-And here is the treble part. It uses a scale of two octaves, as opposed to the one of the previous bass routine.
+The treble uses a scale of two octaves, as opposed to one of the bass routine.
 
 And instead of half-notes, we add a quarter pitched note and a quarter-note rest.
 
