--- a/slides.pod
+++ b/slides.pod
@@ -67,13 +67,13 @@ Writing MIDI files
 
 =item *
 
-Applied music theory
+Applied music theory (i.e. algorithmic music "exercises" a theory)
 
 =back
 
 =begin note
 
-Because algorithmic music "exercises" a theory.
+...
 
 =end note
 
