--- a/slides.pod
+++ b/slides.pod
@@ -97,7 +97,7 @@ For practice and study, with rhythms (i.e. a better metronome) and etudes
 
 =item *
 
-To make fragments to import into a larger context - possibly with a DAW ("digital audio workstation")
+To make fragments to import into a larger context - possibly with a "digital audio workstation" (DAW)
 
 =back
 
