--- a/slides.pod
+++ b/slides.pod
@@ -93,7 +93,7 @@ To generate musical ideas and satisfy curiosity
 
 =item *
 
-For practice and study, with rhythms (i.e. a better metronome) and etudes
+For practice and study, with etudes and rhythms (i.e. a better metronome)
 
 =item *
 
